--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "@vuelidate/validators": "^2.0.0-alpha.25",
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
+    "es6-promise": "^4.2.8",
+    "mutationobserver-shim": "^0.3.7",
+    "popper.js": "^1.16.1",
+    "portal-vue": "^2.1.7",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuelidate": "^0.7.6",
@@ -28,7 +32,8 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0",
     "node-sass": "^4.12.0",
-    "sass-loader": "^8.0.2"
+    "sass": "^1.26.11",
+    "sass-loader": "^10.0.2"
   },
   "eslintConfig": {
     "root": true,
