--- a/package.json
+++ b/package.json
@@ -8,14 +8,18 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@tailwindcss/postcss7-compat": "^2.2.17",
     "@vuelidate/core": "^2.0.0-alpha.32",
     "@vuelidate/validators": "^2.0.0-alpha.25",
+    "autoprefixer": "^9",
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
     "es6-promise": "^4.2.8",
     "mutationobserver-shim": "^0.3.7",
     "popper.js": "^1.16.1",
     "portal-vue": "^2.1.7",
+    "postcss": "^7",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuelidate": "^0.7.6",
@@ -33,7 +37,8 @@
     "eslint-plugin-vue": "^7.0.0",
     "node-sass": "^4.12.0",
     "sass": "^1.26.11",
-    "sass-loader": "^10.0.2"
+    "sass-loader": "^10.0.2",
+    "vue-cli-plugin-tailwind": "^2.2.18"
   },
   "eslintConfig": {
     "root": true,
