--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@vuelidate/validators": "^2.0.0-alpha.26",
     "autoprefixer": "^9",
     "axios": "^0.24.0",
-    "core-js": "^3.20.1",
+    "core-js": "^3.20.2",
+    "date-fns": "^2.28.0",
     "es6-promise": "^4.2.8",
     "moment": "^2.29.1",
     "mutationobserver-shim": "^0.3.7",
@@ -21,6 +22,7 @@
     "portal-vue": "^2.1.7",
     "postcss": "^7",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
+    "timeago.js": "^4.0.2",
     "vue": "^3.2.26",
     "vue-router": "^4.0.0-0",
     "vuelidate": "^0.7.7",
