--- a/back/package.json
+++ b/back/package.json
@@ -11,9 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^3.8.0",
+    "@prisma/client": "^3.8.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.1",
+    "compression": "^1.7.4",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "http-errors": "^1.8.1",
@@ -23,6 +24,6 @@
     "path": "^0.12.7"
   },
   "devDependencies": {
-    "prisma": "^3.8.0"
+    "prisma": "^3.8.1"
   }
 }
