--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
       "node": true
     },
     "extends": [
-      "plugin:vue/recommended",
+      "plugin:vue/essential",
       "eslint:recommended"
     ],
     "parserOptions": {
